...
                            isPresented.toggle()
                        }))
                    }
                }
                
                ToolbarItem(placement: .topBarTrailing) {
                    Button("Done") {
                        data.url = viewModel.urlText
                        data.urlName = viewModel.urlNameText
                        isPresented.toggle()
                    }
                    .buttonStyle(.plain)
                    .disabled(viewModel.isDoneButtonDisabled)
...
